# event-simulator-gui

./: .gitignore  CMakeLists.txt  README.md  main.py  package.xml  requirements.txt
launch/: event_sim.launch
src/: add_events.py  clock_window.py  event_definition.py  event_simulator_gui.py  gui.py  icon_db.py  projector.py  schedule.py  virtual_clock.py  virtual_clock_ros.py
src/ui/: base_event.py  borderless_window.py  event_log.py  event_log_item.py  event_table.py  external_event.py  external_event_widget.py  image_with_clock.py  scheduled_event.py  scheduled_event_widget.py  scrollable_frame.py  table.py  virtual_clock_viewer_widget.py  virtual_clock_widget.py  window.py
srv/: ClockCommand.srv
